Fixed the  weird issue with side menu being translucent by adding z-index in css

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -39,6 +39,7 @@ header {
   background: grey;
   padding: 0 30px;
   transition: all 1s;
+  z-index: 10;
 }
 
 .Sidemenu ul {
